--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             android:id="@+id/btnInstructor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Instructor" />
+            android:text="Referee" />
 
         <RadioButton
             android:id="@+id/btnStudent"
